# polkadot-sdk-minimal-template

./: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/actions/macos-dependencies/: action.yml
.github/scripts/: debian-prerequisites.sh  ubuntu-prerequisites.sh
.github/workflows/: build-docker.yml  ci.yml  pr-reminder.yml  release.yml
node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
